[gd_scene load_steps=14 format=3 uid="uid://dr62j3qth0fse"]

[ext_resource type="Script" uid="uid://duaw2xhpp0yp3" path="res://scripts/root/collection_menu.gd" id="1_43fw8"]
[ext_resource type="Shader" uid="uid://nyhumgmh88xf" path="res://shaders/jitter.gdshader" id="1_wr87i"]
[ext_resource type="FontFile" uid="uid://cr4w8q6feu5hn" path="res://graphics/fonts/HandymandiFree.ttf" id="2_lqso2"]
[ext_resource type="Theme" uid="uid://fb8i75cnh00j" path="res://graphics/menu_button.tres" id="3_43fw8"]
[ext_resource type="FontFile" uid="uid://dmiua4vyuiu88" path="res://graphics/fonts/cc.yal.6w3.ttf" id="3_vkdli"]
[ext_resource type="PackedScene" uid="uid://bv5t34hawclwa" path="res://scenes/controls/mouse_cursor.tscn" id="5_mbssr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43fw8"]
shader = ExtResource("1_wr87i")
shader_parameter/intensity = 1.0000000475
shader_parameter/frequency = 5.00000019

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wdwai"]
shader = ExtResource("1_wr87i")
shader_parameter/intensity = 1.0000000475
shader_parameter/frequency = 5.00000019

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ukao"]
bg_color = Color(0.44313726, 0.24705882, 0.32156864, 1)
border_width_top = 3
border_color = Color(0.73333335, 0.2784314, 0.30980393, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mbssr"]
shader = ExtResource("1_wr87i")
shader_parameter/intensity = 0.50000002375
shader_parameter/frequency = 5.00000019

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wdwai"]
bg_color = Color(0.22352941, 0.16862746, 0.20784314, 1)
border_width_left = 2
border_width_right = 2
border_color = Color(0.22352941, 0.16862746, 0.20784314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ukao"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_taojx"]

[node name="Collection Menu" type="Node2D"]
script = ExtResource("1_43fw8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="Control"]
material = SubResource("ShaderMaterial_43fw8")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_fonts/font = ExtResource("2_lqso2")
text = "Collect Your Art"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
material = SubResource("ShaderMaterial_wdwai")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 5.0
offset_right = 112.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="End Button" type="Button" parent="Control/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme = ExtResource("3_43fw8")
text = "End Run"

[node name="Save Button" type="Button" parent="Control/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme = ExtResource("3_43fw8")
theme_override_styles/normal = SubResource("StyleBoxFlat_5ukao")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ukao")
text = "Save"

[node name="Next Button" type="Button" parent="Control/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme = ExtResource("3_43fw8")
text = "Next"

[node name="LineEdit" type="LineEdit" parent="."]
material = SubResource("ShaderMaterial_mbssr")
offset_left = 12.0
offset_top = 42.0
offset_right = 307.0
offset_bottom = 59.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_colors/font_selected_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_colors/font_placeholder_color = Color(0.28235295, 0.41960785, 0.49803922, 1)
theme_override_colors/caret_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_fonts/font = ExtResource("3_vkdli")
theme_override_styles/normal = SubResource("StyleBoxFlat_wdwai")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_5ukao")
theme_override_styles/focus = SubResource("StyleBoxEmpty_taojx")
placeholder_text = "Enter a save path.."

[node name="ImageName" type="LineEdit" parent="."]
material = SubResource("ShaderMaterial_mbssr")
offset_left = 12.0
offset_top = 65.0
offset_right = 307.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_colors/font_selected_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_colors/font_placeholder_color = Color(0.28235295, 0.41960785, 0.49803922, 1)
theme_override_colors/caret_color = Color(0.81960785, 0.7490196, 0.6901961, 1)
theme_override_fonts/font = ExtResource("3_vkdli")
theme_override_styles/normal = SubResource("StyleBoxFlat_wdwai")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_5ukao")
theme_override_styles/focus = SubResource("StyleBoxEmpty_taojx")
placeholder_text = "Enter image name"

[node name="Mouse Cursor" parent="." instance=ExtResource("5_mbssr")]

[connection signal="pressed" from="Control/HBoxContainer/End Button" to="." method="_on_end_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Save Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Next Button" to="." method="_on_next_button_pressed"]
